Fixed width being too much on mobile

--- a/assets/css/portfolio-rethink.css
+++ b/assets/css/portfolio-rethink.css
@@ -253,8 +253,6 @@ body
     color:#FFFFFFFF;
     text-shadow: 0 1px 1px rgba(0,0,0, 1);
     background-color: #00000030;
-    width:600px;
-
 
     border-radius: 8px;
   
